--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/kirk-c-saunders/express-crash#readme",
   "dependencies": {
+    "colors": "^1.4.0",
     "express": "^5.2.1"
   }
 }
